--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Esperando el regreso de Cata</h1>
+        <h1>¡¡Esperando el regreso de Cata!!</h1>
         <div id="countdown">
             <div><span id="days"></span><span>Días</span></div>
             <div><span id="hours"></span><span>Horas</span></div>
